# panopticon

./: .gitignore  clean.sh  doc_2025-11-10_00-11-08.env  docker-compose.coturn.yml  docker-compose.old.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  script.sh
ml_service/: Dockerfile  pyproject.toml  requirements.txt
ml_service/app/: open_pose.py  server.py
ml_service/ml_repository/calibration/: config.pbtxt
ml_service/ml_repository/monitoring/: config.pbtxt
panopticon/: Dockerfile  pyproject.toml  requirements.txt
panopticon/panopticon/: manage.py
panopticon/panopticon/account/: admin.py  forms.py  models.py  singnals.py  urls.py  views.py
panopticon/panopticon/core/: urls.py  views.py
panopticon/panopticon/panopticon/: asgi.py  settings.py  urls.py  wsgi.py
panopticon/panopticon/streaming/: models.py  urls.py  views.py
panopticon/panopticon/testing/: models.py  urls.py  views.py
panopticon/panopticon/video_testing/: apps.py  urls.py  views.py
vstream_service/: Dockerfile  Dockerfile_old  pyproject.toml  requirements.txt
vstream_service/app/: config.py  dependencies.py  exceptions.py  main.py  services.py  utils.py
vstream_service/app/api/: dependencies.py  routes.py
vstream_service/app/aws/: s3_video_storage.py  s3_video_storage_factory.py
vstream_service/app/config/: config.py  lifespan.py  logging.py  s3_client.py  settings.py
vstream_service/app/core/: database.py  dependencies.py  events.py  lifespan.py  logger.py  s3_client.py
vstream_service/app/grpc_client/: base_processor.py  get_processor_factory.py  grpc_processor_manager.py  processor_factory.py  processor_manager.py  processor_manager_factory.py  video_processor.py
vstream_service/app/middleware/: logging.py
vstream_service/app/migrations/: env.py
vstream_service/app/ml_client/: video_processor.py  video_processor_base.py  video_processor_factory.py  video_processor_type.py
vstream_service/app/proto/: ml_worker.proto
vstream_service/app/repositories/: repository_factory.py
vstream_service/app/routers/: stream.py
vstream_service/app/schemas/: streaming_session.py  streaming_video.py
vstream_service/app/services/: session_service.py  stream_service.py  streaming_runtime_service.py  streaming_runtime_service_factory.py  streaming_session_lifecycle_service.py  (+1 more)
vstream_service/app/stream/: entities.py  (+4 more)
vstream_service/tests/: test_api.py
(+203 files in other folders)
